fix: :bug: fixed wrong color on theme

--- a/src/scss/global/_theming.scss
+++ b/src/scss/global/_theming.scss
@@ -11,7 +11,6 @@
   --gray-20: #808080;
   --title-shadow: #0f1089;
 
-
   --checkmark-disabled: url("/images/icons/checkmark-disabled.png");
   --radio-dot-disabled: url("/images/icons/radio-dot-disabled.png");
   --scroll-background: url("/images/icons/scroll-background.png");
@@ -116,7 +115,7 @@
 
     --theme-text-color: #222222;
     --theme-text-muted: #5f5f5f;
-    --theme-border-color: var(#d9d9d9);
+    --theme-border-color: #d9d9d9;
     --theme-link-color: #0000ff;
     --theme-post-url-color: green;
     --theme-input-bg-color: #fff;
@@ -181,7 +180,7 @@
     --theme-tab-hover-shadow: none;
 
     --theme-text-color: #bbbaba;
-    --theme-border-color: var(#d9d9d9);
+    --theme-border-color: #d9d9d9;
     --theme-text-muted: #bbbaba;
     --theme-link-color: #ff9800;
     --theme-post-url-color: #6bb571;
